--- a/style.css
+++ b/style.css
@@ -28,3 +28,36 @@ label, input, button {
     -webkit-box-sizing: content-box;
     box-sizing: content-box;
 }
+
+.slider-container{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.value-container{
+    margin-bottom: 25px;
+}
+
+#demo{
+    color: rgb(143, 134, 100);
+    font-size: 150px;
+    font-family: 'Oswald', sans-serif;
+}
+
+.slider{
+    width: 60%;
+    background: linear-gradient(to right, #6b8dff 0%, #ff2a5f 0%, #fff 0%, #fff 100%);
+    height: 20px;
+    -webkit-appearnce: none;
+    border-radius: 25px;
+
+}
+
+#blocks-item{
+    border border-color: #6b8dff;
+    
+}
+
