Fixed All Api's Fixed Navbar
Fixed the navbar dropdown, fixed the aligning of I classes, and the text lineup made it blind handy

--- a/style.css
+++ b/style.css
@@ -56,12 +56,8 @@ label, input, button {
 
 }
 
-#blocks-item{
-    border border-color: #6b8dff;
-    
-}
 
-.WideModal{
-    width: 100% !important;
+.WithModal {
+    width:850px !important;
 }
 
